page index avec les boutons

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,6 +37,20 @@
 	</section>
 	<section id="portfolio">
 		<h2>Mes Projets</h2>
+		<div class="boutons">
+			<div class="btn" >
+				<a class="btn-a" href="#">Tous</a>
+			</div>
+			<div class="btn" >
+				<a class="btn-a" href="#">Objects</a>
+			</div>
+			<div class="btn" >
+				<a class="btn-a" href="#">Appartemnts</a>
+			</div>
+			<div class="btn" >
+				<a class="btn-a" href="#">Hôtels & restaurants</a>
+			</div>
+		</div>
 		<div class="gallery">
 			
 		</div>
