--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="https://kit.fontawesome.com/e7617f6ec8.js" crossorigin="anonymous"></script>
 	
 </head>
 <body>
@@ -36,20 +37,13 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<div class="MesProjets"> 
+			<h2>Mes Projets</h2>
+			<div class="modifier">
+				<p><i class="fa-solid fa-pen-to-square"></i>modifier</p>
+			</div>
+		</div>
 		<div class="boutons">
-			<div class="btn" >
-				<a class="btn-a" href="#">Tous</a>
-			</div>
-			<div class="btn" >
-				<a class="btn-a" href="#">Objects</a>
-			</div>
-			<div class="btn" >
-				<a class="btn-a" href="#">Appartemnts</a>
-			</div>
-			<div class="btn" >
-				<a class="btn-a" href="#">Hôtels & restaurants</a>
-			</div>
 		</div>
 		<div class="gallery">
 			
