recupuration des donner mail et password

--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -30,7 +30,7 @@
 			<input type="email" name="email" id="email">
 			<label for="password">Mot de pass</label>
             <input type="password" id="pass" name="password" minlength="8" required />
-			<input type="submit" value="Se connecter">
+			<input type="submit" id="submit-btn" value="Se connecter">
 		</form>
 	</section>
 </main>
@@ -43,6 +43,6 @@
 	</nav>
 </footer>
 <script src="api.js"></script>
-<script src="scripts.js"></script>
+<script src="login.js"></script>
 </body>
 </html>
