--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -25,11 +25,11 @@
 <main class="main-login">
 	<section id="contact">
 		<h2>Log In</h2>
-		<form action="#" method="post">
+		<form action="#" method="post" id="connection">
 			<label for="email">E-mail</label>
-			<input type="email" name="email" id="email">
+			<input type="email" name="email" id="email" placeholder="E-mail">
 			<label for="password">Mot de pass</label>
-            <input type="password" id="pass" name="password" minlength="8" required />
+            <input type="password" id="pass" placeholder="Mot de passe" name="password" minlength="8" required />
 			<input type="submit" id="submit-btn" value="Se connecter">
 		</form>
 	</section>
@@ -44,5 +44,6 @@
 </footer>
 <script src="api.js"></script>
 <script src="login.js"></script>
+<script src="teste.js"></script>
 </body>
 </html>
