--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -44,6 +44,7 @@
 </footer>
 <script src="api.js"></script>
 <script src="login.js"></script>
+<script src="scripts.js"></script>
 <script src="teste.js"></script>
 </body>
 </html>
