--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,20 +6,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
+	<script src="https://kit.fontawesome.com/43d0d42b97.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
-	<script src="https://kit.fontawesome.com/e7617f6ec8.js" crossorigin="anonymous"></script>
-	
 </head>
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li><a href="projets.html"></a>projets</li>
-			<li><a href="contact.html"></a>contact</li>
-			<li><a href="login.html">login</a></li>
+			<li><a href="#portfolio">projets</a></li>
+			<li><a href="#contact">contact</a></li>
+			<li><a href="login.html" id="log">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
@@ -36,17 +35,96 @@
 			<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG, décorateur(trice)</p>
 		</article>
 	</section>
-	<section id="portfolio">
-		<div class="MesProjets"> 
-			<h2>Mes Projets</h2>
-			<div class="modifier">
-				<p><i class="fa-solid fa-pen-to-square"></i>modifier</p>
+	<aside id="modal1" class="modal" aria-hidden="true" role="dialog" aria-labelledby="titlemodal" style="display: none">
+		<div class="modal-wrapper js-modal-stop modal-premier">
+			<button class="js-modal-close"><i class="fa-solid fa-xmark"></i></button>
+			<h1 id="titlemodal">Galerie Photos</h1>
+			<div class="modal-gallery">
+
+			</div>
+			<div class="separation"></div>
+			<div class="picture-par">
+				<button class="add-picture">Ajouter une Photo</button>
+				<p class="sup-gal">Supprimer la galerie</p>
 			</div>
 		</div>
-		<div class="boutons">
+		<div id="modal2" class="modal-wrapper js-modal-stop" style="display: none">
+			<div class="modal2-icon">
+				<button class="js-backButton"><i class="fa-solid fa-arrow-left"></i></button>
+				<button class="js-backButton"><i class="fa-solid fa-xmark"></i></button>
+			</div>
+			<h1 class="flexcenter">Ajout Photo</h1>
+			<form class="addPictures">
+				<div class="container-add-pictures flexcenter column">
+					<img id="preview" alt="Image preview">
+					<div class="gestion-display">
+						<i class="fa-regular fa-image"></i>
+						<label class="container-add-pictures-button" for="file-upload">+ Ajouter photo</label>
+						<input type="file" id="file-upload" name="file-upload" onchange="getPicture()" accept="image/png, image/jpg">
+						<p class="container-add-pictures-p">jpg, png : 4mo max</p>
+					</div>
+				</div>
+				<label for="titre">Titre</label>
+				<input type="text" name="titre" id="titre">
+				<label for="category">Catégorie</label>
+				<select name="category-select" id="category">
+					<option value="">-- Choisissez une catégorie --</option>
+					<option value="Objets">Objets</option>
+					<option value="Appartements">Appartements</option>
+					<option value="Hotels & restaurants">Hotels & restaurants</option>
+				</select>
+				<div class="separation2"></div>
+				<button class="add-picture-valid">Valider</button>
+			</form>
 		</div>
+	</aside>
+	<section id="portfolio">
+		<h2>Mes Projets</h2>
 		<div class="gallery">
-			
+			<figure>
+				<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
+				<figcaption>Abajour Tahina</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
+				<figcaption>Appartement Paris V</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/restaurant-sushisen-londres.png" alt="Restaurant Sushisen - Londres">
+				<figcaption>Restaurant Sushisen - Londres</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/la-balisiere.png" alt="Villa “La Balisiere” - Port Louis">
+				<figcaption>Villa “La Balisiere” - Port Louis</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/structures-thermopolis.png" alt="Structures Thermopolis">
+				<figcaption>Structures Thermopolis</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/appartement-paris-x.png" alt="Appartement Paris X">
+				<figcaption>Appartement Paris X</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/le-coteau-cassis.png" alt="Pavillon “Le coteau” - Cassis">
+				<figcaption>Pavillon “Le coteau” - Cassis</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/villa-ferneze.png" alt="Villa Ferneze - Isola d’Elba">
+				<figcaption>Villa Ferneze - Isola d’Elba</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/appartement-paris-xviii.png" alt="Appartement Paris XVIII">
+				<figcaption>Appartement Paris XVIII</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/bar-lullaby-paris.png" alt="Bar “Lullaby” - Paris">
+				<figcaption>Bar “Lullaby” - Paris</figcaption>
+			</figure>
+			<figure>
+				<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
+				<figcaption>Hotel First Arte - New Delhi</figcaption>
+			</figure>
 		</div>
 	</section>
 	<section id="contact">
@@ -71,8 +149,8 @@
 		</ul>
 	</nav>
 </footer>
-<script src="api.js"></script>
-<script src="scripts.js"></script>
-
+<script src="./scripts/route.js"></script>
+<script src="./scripts/modal.js"></script>
+<script src="./scripts/index.js"></script>
 </body>
 </html>
